InFlix/force-app/main/default/objects/TV_Series__c/TV_Series__c.object-meta.xml
<CustomObject>
    <label>TV Series</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TV Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>