InFlix/force-app/main/default/objects/TV_Series__c/fields/Number_of_episodes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_episodes__c</fullName>
    <label>Number of episodes</label>
    <summaryForeignKey>Episode__c.TV_series__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>