InFlix/force-app/main/default/objects/TV_Series__c/fields/Number_of_seasons__c.field-meta.xml
<CustomField>
    <fullName>Number_of_seasons__c</fullName>
    <label>Number of seasons</label>
    <summaryForeignKey>Season__c.TV_Series__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>