InFlix/force-app/main/default/objects/TV_Series__c/fields/Production_Year__c.field-meta.xml
<CustomField>
    <fullName>Production_Year__c</fullName>
    <label>Production Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>