InFlix/force-app/main/default/objects/TV_Series__c/validationRules/Production_year_can_not_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_year_can_not_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Production_Year__c)),
    Production_Year__c &gt; YEAR(TODAY())
)</errorConditionFormula>
    <errorDisplayField>Production_Year__c</errorDisplayField>
    <errorMessage>Production year can&apos;t be in future</errorMessage>
</ValidationRule>