InFlix/force-app/main/default/objects/TV_Series__c/validationRules/Trailer_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Trailer_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Trailer__c)),
NOT(BEGINS(Trailer__c, &quot;https://www.youtube.com/embed/&quot;))
)</errorConditionFormula>
    <errorDisplayField>Trailer__c</errorDisplayField>
    <errorMessage>Trailer url must start with: https://www.youtube.com/embed/ then there should be id of movie.
Example: https://www.youtube.com/embed/&apos;youtubeMovieId&apos;</errorMessage>
</ValidationRule>