InFlix/force-app/main/default/objects/TV_Series__c/validationRules/Year_should_be_4_char_long.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_should_be_4_char_long</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Production_Year__c)),
    LEN(TEXT(Production_Year__c)) &lt;&gt; 4
)</errorConditionFormula>
    <errorDisplayField>Production_Year__c</errorDisplayField>
    <errorMessage>Production year must be 4 characters long</errorMessage>
</ValidationRule>