InFlix/force-app/main/default/objects/TV_Series__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Genres__c</columns>
    <columns>Number_of_seasons__c</columns>
    <columns>Number_of_episodes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>